--- a/index.html
+++ b/index.html
@@ -29,59 +29,56 @@
 		</section>
 	</main>
 	<footer class="footer">
-		<div class="container footer__container flex"></div>
-			<nav class="footer__column"></nav>
-			<h2 class="footer__title">Путешествия</h2>
-			<ul class="footer__list">
-				<li class="footer__item" ><a href="#" class="footer__link">Про нас</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Туры</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Блог</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Города</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Безопасность</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Центр вызовов</a></li>
-			</ul>
-
-
+			<div class="footer__container">
 				<nav class="footer__column">
-			<h2 class="footer__title">Информация</h2>
-			<ul class="footer__list">
-				<li class="footer__item" ><a href="#" class="footer__link">История создания</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Питание</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Гиды</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Святые места</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Отзывы</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Контакты</a></li>
-			</ul>
-		</nav>
-		<nav class="footer__column"></nav>
-			<h2 class="footer__title">Места для посещения</h2>
-			<ul class="footer__list">
-				<li class="footer__item" ><a href="#" class="footer__link">Сороки</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Старый Орхей</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Кишинев</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Святые места</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Криково</a></li>
-				<li class="footer__item"><a href="#" class="footer__link">Баурчи</a></li>
-		<div class="footer__column">
-			<h2 class="footer__title">Подпишись</h2>
-			<form action="#" class="subs-form">
-				<input type="email" name="email" class="subs-form__field">
-				<button class="btn-reset btn subs-form__btn">Подпишись</button>
-
-			</form>
-
-		</div>
-		<div class="footer__bottom">
-			<small class="footer__copy">© 2020 Disigned by KK-Team. All rights reserved.</small>
-			<ul class="footer__links">
-				<li class="footer__links-item"><a href="#" class="footer__link">Команда</a></li>
-				<li class="footer__links-item"><a href="#" class="footer__link">Лицензия</a></li>
-
-			</ul>
-		</div>
-
+					<h2 class="footer__title">Путешествия</h2>
+					<ul class="footer__list">
+						<li class="footer__item" ><a href="#" class="footer__link">Про нас</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Туры</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Блог</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Города</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Безопасность</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Центр вызовов</a></li>
+					</ul>
+				</nav>
+				<nav class="footer__column">
+					<h2 class="footer__title">Информация</h2>
+					<ul class="footer__list">
+						<li class="footer__item" ><a href="#" class="footer__link">История создания</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Питание</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Гиды</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Святые места</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Отзывы</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Контакты</a></li>
+					</ul>
+				</nav>
+				<nav class="footer__column">
+					<h2 class="footer__title">Места для посещения</h2>
+					<ul class="footer__list">
+						<li class="footer__item" ><a href="#" class="footer__link">Сороки</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Старый Орхей</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Кишинев</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Святые места</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Криково</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Баурчи</a></li>
+					</ul>
+				</nav>
+				<div class="footer__column">
+					<h2 class="footer__title">Подпишись</h2>
+					<form action="#" class="subs-form">
+						<input type="email" name="email" class="subs-form__field" placeholder="Ваш Email">
+						<button class="btn-reset btn subs-form__btn">Подпишись</button>
+					</form>
+				</div>
+			</div>
+			<div class="footer__bottom">
+				<div class="container bottom-container flex">
+					<small class="footer__copy">© 2020 Designed by KK-Team. All rights reserved.</small>
+					<ul class="footer__links">
+						<li class="footer__links-item"><a href="#" class="footer__link">Команда</a></li>
+						<li class="footer__links-item"><a href="#" class="footer__link">Лицензия</a></li>
+					</ul>
+			</div>
 	</footer>
-
-</div>
 </body>
 </html>
